--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2070,6 +2070,7 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
+  table-layout: fixed;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
