--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -10,19 +10,19 @@
           %th= t('family')
           %th= t('created')
           %th= t('enabled')
-          %th
+          %th.width-32
       %tbody
         -@users.each do |user|
           %tr{id: "user-#{user.id}-row"}
-            %td= user.name
-            %td= user.email
-            %td= user.family.name if user.family_id
-            %td= l(user.created_at, format: :medium)
+            %td.truncate= user.name
+            %td.truncate= user.email
+            %td.truncate= user.family.name if user.family_id
+            %td.truncate= l(user.created_at, format: :medium)
             %td
               .material-switch{style: 'padding:4px 0px 0px 12px;'}
                 %input{:id => "user-#{user.id}", :name => "user-#{user.id}", :type => "checkbox", :checked => user.enabled, :onChange => "toggleUser(#{user.id});"}
                 %label.label-success{:for => "user-#{user.id}"}
-            %td{style: "width:32px;"}
+            %td
               = link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_path(user), method: :delete, data: {confirm: t('are_you_sure')}, remote: true
 
     %ul.pager
