--- a/app/views/tasks/_list.html.haml
+++ b/app/views/tasks/_list.html.haml
@@ -1,30 +1,34 @@
 -if @family.tasks.any?
-  -@tasks.each do |k,v|
-    -next unless v.any?
-    -user = User.find_by_id(k)
-    %table.table.table-hover
-      %thead
+  %table.table.table-hover
+    %thead
+      %tr
+        %th.width-40
+        %th= t('task')
+        %th.width-40= t('last')
+        %th.width-40= t('next')
+        %th.width-40
+    %tbody
+      -@tasks.each do |t|
         %tr
+          %td.text-center=content_tag(:i, nil, class: "fa fa-circle fa-2x text-#{t.status_class}")
+          %td.truncate
+            -if current_user.parent?
+              = link_to t.title, edit_task_path(t), remote: true
+            -else
+              = t.title
+            %br
+            %em.text-muted.hidden-xs= t.description
           %td
-            %a.location.title-like{href: member_path(user), style: 'text-decoration:none;'}
-              =image_tag(gravatar_for(user), class: "img-rounded", size: "35x35")
-              =user.name
-      %tbody
-        -v.each do |t|
-          -task = Task.find_by_id(t)
-          %tr
-            %td
-              .pull-right{id: "task-#{task.id}"}
-                -if task.completed?
-                  =content_tag(:i, nil, class: "fa fa-check-square-o fa-2x text-success")
-                -else
-                  = link_to content_tag(:i, nil, class: "fa fa-square-o fa-2x"), complete_task_path(task: task.id), remote: true
-              -if current_user.parent?
-                = link_to task.title, edit_task_path(task), remote: true
-              -else
-                = task.title
-              %br
-              %em{:style => "color:grey;"}= task.description
+            %a.location.title-like{href: member_path(t.completed_by), style: 'text-decoration:none;'}
+              =image_tag(gravatar_for(t.completed_by), class: "img-rounded", size: "35x35")
+          %td
+            %a.location.title-like{href: member_path(t.up_next), style: 'text-decoration:none;'}
+              =image_tag(gravatar_for(t.up_next), class: "img-rounded", size: "35x35")
+          %td{id: "task-#{t.id}"}
+            -if t.completed?
+              =content_tag(:i, nil, class: "fa fa-check-square-o fa-2x text-success")
+            -else
+              = link_to content_tag(:i, nil, class: "fa fa-square-o fa-2x"), complete_task_path(task: t.id), remote: true
 
 -else
   %em= t('no_tasks')
