--- a/app/views/tasks/_sidenav.html.haml
+++ b/app/views/tasks/_sidenav.html.haml
@@ -6,33 +6,35 @@
           -if current_user.parent?
             =link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_task_path, remote: true
         = link_to t('tasks'), "/tasks", class: 'location'
-    .panel-body.visible-xs
-      %table.table.table-hover
-        %thead
-          %tr
-            %th= t('members')
-            %th{style: "width:32px;"}
-              -if current_user.parent?
-                = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
-        %tbody
-          %tr
-            %td{colspan: '2'}
-              -@members.each do |user|
-                = link_to image_tag(gravatar_for(user), class: "img-rounded", size: "40x40"), member_path(user), class: 'location'
-
-    .panel-body.hidden-xs
-      %table.table.table-hover
-        %thead
-          %tr
-            %th= t('members')
-            %th
-              -if current_user.parent?
-                = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
-        %tbody
-          -@members.each do |user|
-            %tr{id: "user-#{user.id}-row"}
+    .panel-body
+      .visible-xs
+        %table.table.table-hover
+          %thead
+            %tr
+              %th
+                .pull-right
+                  -if current_user.parent?
+                    = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
+                = t('members')
+          %tbody
+            %tr
               %td
-                %a.location.title-like{href: member_path(user), style: 'text-decoration:none;'}
-                  =image_tag(gravatar_for(user), class: "img-rounded", size: "35x35")
-                  =user.name
-              %td{style: "width:32px;"}
+                -@members.each do |user|
+                  = link_to image_tag(gravatar_for(user), class: "img-rounded", size: "40x40"), member_path(user), class: 'location'
+
+      .hidden-xs
+        %table.table.table-hover
+          %thead
+            %tr
+              %th
+                .pull-right
+                  -if current_user.parent?
+                    = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
+                = t('members')
+          %tbody
+            -@members.each do |user|
+              %tr{id: "user-#{user.id}-row"}
+                %td
+                  %a.location.title-like{href: member_path(user), style: 'text-decoration:none;'}
+                    =image_tag(gravatar_for(user), class: "img-rounded", size: "35x35")
+                    =user.name
