parents can select who completed task

--- a/app/views/completions/complete_task.js.erb
+++ b/app/views/completions/complete_task.js.erb
@@ -1,1 +1,2 @@
 $("#task-<%= @task.id %>").html('<btn class="fa fa-check-square-o fa-2x text-success"></btn>');
+$("#task-status-<%= @task.id %>").html('<btn class="fa fa-circle fa-2x text-success"></btn>');
