--- a/app/views/families/_form.html.haml
+++ b/app/views/families/_form.html.haml
@@ -20,5 +20,5 @@
   .form-group
     %label.col-md-3.control-label
     .col-md-9{align: 'right'}
-      %input.btn.btn-primary{:name => "commit", :type => "submit", :value => t('save')}/
-      = link_to t("cancel"), '/family', class: "btn btn-info"
+      %input.btn.btn-sm.btn-primary{:name => "commit", :type => "submit", :value => t('save')}/
+      = link_to t("cancel"), '/family', class: "btn btn-info btn-sm"
