modal for selecting who completed

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5467,6 +5467,10 @@ button.close {
     width: 600px;
     margin: 30px auto;
   }
+  .modal-dialog-sm {
+    width: 200px;
+    margin: 30px auto;
+  }
   .modal-content {
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
