key press animation

--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -53,18 +53,18 @@
 
 %table.table.table-bordered{:style => "width:100%;", :align => "center"}
   %tr
-    %td.num.text-center.col-xs-4= "1"
-    %td.num.text-center.col-xs-4= "2"
-    %td.num.text-center.col-xs-4= "3"
+    %td.num.text-center.col-xs-4.key-press= "1"
+    %td.num.text-center.col-xs-4.key-press= "2"
+    %td.num.text-center.col-xs-4.key-press= "3"
   %tr
-    %td.num.text-center= "4"
-    %td.num.text-center= "5"
-    %td.num.text-center= "6"
+    %td.num.text-center.key-press= "4"
+    %td.num.text-center.key-press= "5"
+    %td.num.text-center.key-press= "6"
   %tr
-    %td.num.text-center= "7"
-    %td.num.text-center= "8"
-    %td.num.text-center= "9"
+    %td.num.text-center.key-press= "7"
+    %td.num.text-center.key-press= "8"
+    %td.num.text-center.key-press= "9"
   %tr
-    %td.clear.text-center= t("clear")
-    %td.num.text-center= "0"
+    %td.clear.text-center.key-press= t("clear")
+    %td.num.text-center.key-press= "0"
     %td.submit.bg-primary.text-center= t("submit")
