--- a/app/views/layouts/my_family.html.haml
+++ b/app/views/layouts/my_family.html.haml
@@ -15,7 +15,7 @@
     %meta{:content => "#ffffff", :name => "theme-color"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
     %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}
-  %body
+  %body{ontouchstart: ""}
     %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
       .navbar-header
         %a.navbar-brand
