parent comp not allowing second comp

--- a/app/views/completions/complete_task.js.erb
+++ b/app/views/completions/complete_task.js.erb
@@ -1,3 +1,5 @@
-$("#task-<%= @task.id %>").html('<btn class="fa fa-check-square-o fa-2x text-success"></btn>');
+<% unless current_user.parent? %>
+  $("#task-<%= @task.id %>").html('<btn class="fa fa-check-square-o fa-2x text-success"></btn>');
+<% end %>
 $("#task-status-<%= @task.id %>").html('<btn class="fa fa-circle fa-2x text-success"></btn>');
 $("#task-last-<%= @task.id %>").append("<%= escape_javascript(image_tag(gravatar_for(@completion.user), class: 'img-rounded', size: '25x25'))%>");
