--- a/app/views/tasks/_list.html.haml
+++ b/app/views/tasks/_list.html.haml
@@ -22,12 +22,12 @@
             %em.text-muted.hidden-xs= t.description
 
           -[6,5,4,3,2,1].each do |offset|
-            %td
+            %td.table-bordered
               %span
                 -t.completed_by(t.other_day(offset)).each do |comp|
                   %a.location.title-like{href: member_path(comp.user), style: 'text-decoration:none;'}
                     =image_tag(gravatar_for(comp.user), class: "img-rounded", size: "25x25")
-          %td
+          %td.table-bordered
             %span{id: "task-last-#{t.id}"}
               -t.completed_by.each do |comp|
                 %a.location.title-like{href: member_path(comp.user), style: 'text-decoration:none;'}
